# AuroraIOT

./: .dockerignore  CLAUDE.md  Dockerfile  Pipfile  Queries.sql  README.md  deleteMigrations.sh  docker-compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml  rebuilddatabase.sh  requirements.txt
.github/workflows/: AuroraIOT-CI.yml  AuroraIOT-CI_CD.yml  CD-Oracle-Cloud-US.yml  cd-deployt-to-oracle-cloud.yml  ci-auroraiot.yml  deploy-to-raspberrypi.yml  django.yml  docker-publish.yml  main.yml  master.yml
AuroraIOT/: asgi.py  settings.py  urls.py  views.py  wsgi.py
AuroraIOT/settings/: common.py  dev.py  dev_mqtt_off.py  mqtt_off.py  mqtt_off_debug.py  prod.py  prod_mqtt_off.py
api/: filters.py  serializers.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json  wrangler.jsonc
frontend/src/: App.tsx  index.css
logs/: .gitkeep
mqttclient/: admin.py  apps.py  asgi.py  models.py  mqtt.py  urls.py  views.py
mqttclient/migrations/: 0001_initial.py  0002_data_received_index.py  0002_delete_data.py
sensors/: Queries.sql  admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
sensors/migrations/: 0001_initial.py  0002_data.py  0002_data_delete_sensor_data_rename_reference_sensor_name_and_more.py  0002_data_pzem004t_index.py  0003_alter_data_data.py  0004_alter_sensor_configuration_params_and_more.py  0005_alter_sensor_sensor_configuration.py  0006_sensor_configuration_description_and_more.py  0007_rename_update_interval_sensor_configuration_update_interval_ms.py  (+1 more)
test_app/: urls.py  views.py
(+13 files in other folders)
