[project]
name = "auroraiot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgiref==3.7.2 ; python_full_version >= '3.7'",
    "certifi==2023.11.17 ; python_full_version >= '3.6'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.7'",
    "coreapi>=2.3.3",
    "coreschema==0.0.4",
    "django==5.0.1 ; python_full_version >= '3.10'",
    "django-cors-headers==4.3.1",
    "django-filter==23.5",
    "django-timescaledb==0.2.13",
    "djangorestframework==3.14.0",
    "drf-nested-routers==0.93.5",
    "gunicorn==21.2.0",
    "idna==3.6 ; python_full_version >= '3.5'",
    "itypes==1.2.0",
    "jinja2==3.1.3 ; python_full_version >= '3.7'",
    "markupsafe==2.1.4 ; python_full_version >= '3.7'",
    "packaging==23.2 ; python_full_version >= '3.7'",
    "paho-mqtt==1.6.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "pytz==2023.4",
    "requests==2.31.0 ; python_full_version >= '3.7'",
    "sqlparse==0.4.4 ; python_full_version >= '3.5'",
    "typing-extensions==4.9.0 ; python_full_version < '3.11'",
    "uritemplate==4.1.1 ; python_full_version >= '3.6'",
    "urllib3==2.1.0 ; python_full_version >= '3.8'",
    "whitenoise==6.6.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
